--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>正在施工中，很快见面</h1>
-<a href="ARKFUTURE.html">成员必读规章制度</a>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title></title>
+</head>
+
+<body>
+<div style="text-align: center;"><p>ARKFUTURE</p></div>
+<div style="text-align: center;"><p>方舟未来工作室</p></div>
+<div style="text-align: center;"><a href="ARKFUTURE.HTM">方舟未来工作室规章制度</a></div>
+</body>
+</html>
