--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <div style="text-align: center;"><p>ARKFUTURE</p></div>
 <div style="text-align: center;"><p>方舟未来工作室</p></div>
-<div style="text-align: center;"><a href="/ARKFUTURE.HTM">方舟未来工作室规章制度</a></div>
+<div style="text-align: center;"><a href="http://arkfuture.tpddns.cn:1314//ARKFUTURE.HTM">方舟未来工作室规章制度</a></div>
 </body>
 </html>
