--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title></title>
+    <meta charset="utf-8">
+    <title>ARKFUTURE</title>
+    <meta http-equiv="refresh" content="500">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <script>alert("弹窗")</script>
+    <script>JSON</script>
+    <style>CSS</style>
 </head>
 
+
 <body>
-<div style="text-align: center;"><p>ARKFUTURE</p></div>
-<div style="text-align: center;"><p>方舟未来工作室</p></div>
-<div style="text-align: center;"><a href="">方舟未来工作室规章制度</a></div>
+<h1  style="text-align: center;color: darkviolet;">标题1</h1>
+<br><br><br>
+<h2  style="text-align: center;color: darkviolet;">标题2</h2>
+<p>内容1</p>
+<p>ARKFUTURE单页面框架</p>
+
+
+
+
+
+<br><br><br>
 </body>
+
+
+<footer style="text-align: center;color: darkviolet;">
+    <p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br>2015-∞</p>
+</footer>
+
+
 </html>
