--- a/index.html
+++ b/index.html
@@ -1,35 +1,86 @@
 <!DOCTYPE html>
 <html>
 
+<!--下面是头头区-->
 <head>
-    <meta charset="utf-8">
-    <title>ARKFUTURE</title>
-    <meta http-equiv="refresh" content="500">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <script>alert("弹窗")</script>
-    <script>JSON</script>
-    <style>CSS</style>
+<meta charset="utf-8">
+<title>ARKFUTURE</title>
+<meta http-equiv="refresh" content="500">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<link rel="stylesheet" href="\css\a.css">
 </head>
+<!--上面是头头区-->
 
-
+<!--下面是身体区-->
 <body>
-<h1  style="text-align: center;color: darkviolet;">标题1</h1>
-<br><br><br>
-<h2  style="text-align: center;color: darkviolet;">标题2</h2>
-<p>内容1</p>
-<p>ARKFUTURE单页面框架</p>
+
+<!--下面是one区-->
+<div class="one">
+	<div style="text-align: center;color: darkviolet;"><p>♥</p></div>
+	<div style="text-align: center;color: darkviolet;"><p>ARKFUTURE</p></div>
+	<div style="text-align: center;color: darkviolet;"><p>方舟未来工作室</p></div>
+	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<br>
+	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;color: darkviolet;"><p>注意:因为本站有多个镜像站,所以域名不固定</p></div>
+</div>
+<!--上面是one区-->
+
+<!--下面是two区-->
+<br>
+<hr>
+<br>
+<div class="two">
+	<h2 style="text-align: center;color: darkviolet;">工作室资产列表(绿色为在用,红色为停用)</h2>
+	<h4 style="text-align: center;color: darkviolet;">资产使用域名:arkfuture.tpddns.cn(暂时使用)</h4><br>
+
+	<div style="text-align: left;color: green;"><p>Web页面，端口:1314</p></div><br>
+	<div style="text-align: left;color: green;"><p>网络电台，端口:1315</p></div><br>
+	<div style="text-align: left;color: red;"><p>socks服务(代理),端口:5554</p></div><br>
+	<div style="text-align: left;color: red;"><p>http服务(代理),端口:5555</p></div><br>
+	<div style="text-align: left;color: green;"><p>IRC服务(聊天),端口:默认,,频道:#ark</p></div><br>
+	<div style="text-align: left;"><p><a style="color:red;" href="./ARKFUTURE/iptv.m3u">IPTV订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p></p><a style="color:red;" href="./ARKFUTURE/v2">v2ray订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p></p><a style="color:red;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p></p><a style="color: green;" href="./res">临时资源库</a></p></div><br>
+
+</div>
+<!--上面是two区-->
+
+<br>
+<hr>
+<br>
 
 
+<!--下面是其他区-->
+<div>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=2239826566&auto=1&height=90"></iframe>
+<div>
+    <form action="mailto:ARKFUTURE@FOXMAIL.COM" method="post" enctype="text/plain">
+    <!--<form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=ARKFUTURE@QQ.COM&amp;bcc=ARKFUTUR@VIP.QQ.com" method="post" enctype="text/plain">-->
+    <table width="97%">
+
+	<input name="" type="text" size="30" placeholder="这是单行输入框，您可以任选一个！"/><br>
+	<textarea name="" cols="30" rows="1"  placeholder="这里是输入框，还可以放大缩小！"></textarea><br>
+	<input type="submit" name="" class="button" value="点击这里给我们发建议邮件！把您想说的话写在上面的输入框里！"/><br>
+
+    </table>
+    </form>
+</div>
+
+<!--上面是其他区-->
 
 
-
-<br><br><br>
+<br>
+<hr>
+<br>
 </body>
+<!--上面是身体区-->
 
-
+<!--下面是jio注-->
 <footer style="text-align: center;color: darkviolet;">
-    <p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br>2015-∞</p>
+<p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br>2015-∞</p>
 </footer>
-
+<!--上面是jio注-->
 
 </html>
