upgrade index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<!--
+您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,下面标注的资产使用域名也是临时使用,具体更改会随着网页的更新而更新,
+我们是自由软件,自由文档的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度,很高兴您的访问
+关于页面,由于我们要搭建镜像站,所以尽可能的减轻网站使用资源,所以我(网站管理者)个人决定,使用html单页面来写,就不用什么其他框架了
+写在最后:很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
+-->
 <!--下面是头头区-->
 <head>
 <meta charset="utf-8">
@@ -22,7 +27,6 @@
 	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
 	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
-	<div style="text-align: center;color: darkviolet;"><p>注意:因为本站有多个镜像站,所以域名不固定</p></div>
 </div>
 <!--上面是one区-->
 
