--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <!--
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,下面标注的资产使用域名也是临时使用,具体更改会随着网页的更新而更新,
-我们是自由软件,自由文档的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度,很高兴您的访问
-关于页面,由于我们要搭建镜像站,所以尽可能的减轻网站使用资源,所以我(网站管理者)个人决定,使用html单页面来写,就不用什么其他框架了
+我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度,很高兴您的访问
+!@关于页面,由于我们要搭建镜像站,所以尽可能的减轻网站使用资源,所以我(网站管理者)个人决定,使用单页面来写,就不用什么其他框架了
 写在最后:很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
 -->
 <!--下面是头头区-->
@@ -12,7 +12,8 @@
 <title>ARKFUTURE</title>
 <meta http-equiv="refresh" content="500">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="stylesheet" href="\css\a.css">
+<link rel="stylesheet" href="/css/a.css">
+<script src="./js/a.js"></script>
 </head>
 <!--上面是头头区-->
 
@@ -24,9 +25,9 @@
 	<div style="text-align: center;color: darkviolet;"><p>♥</p></div>
 	<div style="text-align: center;color: darkviolet;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: darkviolet;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: darkviolet;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: darkviolet;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: darkviolet;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 </div>
 <!--上面是one区-->
 
@@ -35,17 +36,16 @@
 <hr>
 <br>
 <div class="two">
-	<h2 style="text-align: center;color: darkviolet;">工作室资产列表(绿色为在用,红色为停用)</h2>
-	<h4 style="text-align: center;color: darkviolet;">资产使用域名:arkfuture.tpddns.cn(暂时使用)</h4><br>
+	<h2 style="text-align: center;color: darkviolet;">工作室资产列表</h2>
+	<h4 style="text-align: center;color: darkviolet;">当前资产使用域名:arkfuture.tpddns.cn</h4><br>
 
 	<div style="text-align: left;color: green;"><p>Web页面，端口:1314</p></div><br>
 	<div style="text-align: left;color: green;"><p>网络电台，端口:1315</p></div><br>
-	<div style="text-align: left;color: red;"><p>socks服务(代理),端口:5554</p></div><br>
-	<div style="text-align: left;color: red;"><p>http服务(代理),端口:5555</p></div><br>
+	<div style="text-align: left;color: green;"><p>socks服务(代理),端口:5554</p></div><br>
+	<div style="text-align: left;color: green;"><p>http服务(代理),端口:5555</p></div><br>
 	<div style="text-align: left;color: green;"><p>IRC服务(聊天),端口:默认,,频道:#ark</p></div><br>
-	<div style="text-align: left;"><p><a style="color:red;" href="./ARKFUTURE/iptv.m3u">IPTV订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p></p><a style="color:red;" href="./ARKFUTURE/v2">v2ray订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p></p><a style="color:red;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p><a style="color:green;" href="./ARKFUTURE/iptv.m3u">IPTV订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p></p><a style="color:green;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
 	<div style="text-align: left;"><p></p><a style="color: green;" href="./res">临时资源库</a></p></div><br>
 
 </div>
@@ -58,8 +58,7 @@
 
 <!--下面是其他区-->
 <div>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=2239826566&auto=1&height=90"></iframe>
-<div>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=1&id=49729&auto=1&height=90"></iframe><div>
     <form action="mailto:ARKFUTURE@FOXMAIL.COM" method="post" enctype="text/plain">
     <!--<form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=ARKFUTURE@QQ.COM&amp;bcc=ARKFUTUR@VIP.QQ.com" method="post" enctype="text/plain">-->
     <table width="97%">
@@ -83,7 +82,9 @@
 
 <!--下面是jio注-->
 <footer style="text-align: center;color: darkviolet;">
-<p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br>2015-∞</p>
+<p> ARKFUTURE | ARKFUTURESTUDIO |ARKFUTUREGROUP <br> 方舟未来 | 方舟未来工作室 | 方舟未来集团 <br> 2015 - ∞ </p><br>
+<p>编者说:知识本无用,用了才有用.请务必多读书,多学习</p>
+
 </footer>
 <!--上面是jio注-->
 
