upgrade index.html

--- a/index.html
+++ b/index.html
@@ -1,91 +1,96 @@
 <!DOCTYPE html>
 <html>
 <!--
-您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,下面标注的资产使用域名也是临时使用,具体更改会随着网页的更新而更新,
+您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度,很高兴您的访问
 !@关于页面,由于我们要搭建镜像站,所以尽可能的减轻网站使用资源,所以我(网站管理者)个人决定,使用单页面来写,就不用什么其他框架了
+界面美不美观,我们不在乎,我们为各位同志提供的是服务,界面只是交互使用
 写在最后:很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
 -->
-<!--下面是头头区-->
+<!--下面是头头区开始-->
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>ARKFUTURE</title>
 <meta http-equiv="refresh" content="500">
+<meta name="keywords" content="ARKFUTURE">
+<meta name="description" content="ARKFUTURE 引导页">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="stylesheet" href="/css/a.css">
-<script src="./js/a.js"></script>
+<link rel="icon" href="./favicon.ico">
+<link rel="stylesheet" href="./css/a.css">
+<style>CSS</style>
+<script src="./js/a.js">js</script>
+<!--<script>弹窗公告</script>-->
 </head>
-<!--上面是头头区-->
+<!--头头区结束-->
+<!--下面是身体区开始-->
+<body style="background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://w.wallhaven.cc/full/we/wallhaven-we1q2r.png);">
+<!--下面是div遮罩层开始-->
+<div class="one" style="background-color:rgba(23,12,31,0.2);border-radius:30px;">
 
-<!--下面是身体区-->
-<body>
-
-<!--下面是one区-->
-<div class="one">
-	<div style="text-align: center;color: darkviolet;"><p>♥</p></div>
-	<div style="text-align: center;color: darkviolet;"><p>ARKFUTURE</p></div>
-	<div style="text-align: center;color: darkviolet;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: darkviolet;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
-	<br>
-	<div style="text-align: center;"><a style="color: darkviolet;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
-</div>
-<!--上面是one区-->
-
-<!--下面是two区-->
-<br>
-<hr>
-<br>
-<div class="two">
-	<h2 style="text-align: center;color: darkviolet;">工作室资产列表</h2>
-	<h4 style="text-align: center;color: darkviolet;">当前资产使用域名:arkfuture.tpddns.cn</h4><br>
-
-	<div style="text-align: left;color: green;"><p>Web页面，端口:1314</p></div><br>
-	<div style="text-align: left;color: green;"><p>网络电台，端口:1315</p></div><br>
-	<div style="text-align: left;color: green;"><p>socks服务(代理),端口:5554</p></div><br>
-	<div style="text-align: left;color: green;"><p>http服务(代理),端口:5555</p></div><br>
-	<div style="text-align: left;color: green;"><p>IRC服务(聊天),端口:默认,,频道:#ark</p></div><br>
-	<div style="text-align: left;"><p><a style="color:green;" href="./ARKFUTURE/iptv.m3u">IPTV订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p></p><a style="color:green;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p></p><a style="color: green;" href="./res">临时资源库</a></p></div><br>
-
-</div>
-<!--上面是two区-->
-
-<br>
-<hr>
-<br>
-
-
-<!--下面是其他区-->
+<!--下面是one区开始-->
 <div>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=1&id=49729&auto=1&height=90"></iframe><div>
-    <form action="mailto:ARKFUTURE@FOXMAIL.COM" method="post" enctype="text/plain">
-    <!--<form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=ARKFUTURE@QQ.COM&amp;bcc=ARKFUTUR@VIP.QQ.com" method="post" enctype="text/plain">-->
-    <table width="97%">
-
-	<input name="" type="text" size="30" placeholder="这是单行输入框，您可以任选一个！"/><br>
-	<textarea name="" cols="30" rows="1"  placeholder="这里是输入框，还可以放大缩小！"></textarea><br>
-	<input type="submit" name="" class="button" value="点击这里给我们发建议邮件！把您想说的话写在上面的输入框里！"/><br>
-
-    </table>
-    </form>
+	<br>
+	<div style="text-align: center;color: white;"><p>♥</p></div>
+	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
+	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<br>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<br>
 </div>
+<!--one区结束-->
 
-<!--上面是其他区-->
-
-
+<!--下面是two区开始-->
 <br>
 <hr>
 <br>
+<div>
+	<h2 style="text-align: center;color: white;">工作室资产列表</h2>
+
+	<div style="text-align: left;color: yellow;"><p>Web页面，端口:1314</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>网络电台，端口:1315</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>socks服务(代理), 端口:5554</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>http服务(代理), 端口:5555</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>IRC服务(聊天), 端口:默认,进入频道:#ark</p></div><br>
+	<div style="text-align: left;"><p></p><a style="color: yellow;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p></p><a style="color: yellow;" href="./res">临时资源库</a></p></div><br>
+
+</div>
+<!--two区结束-->
+<br>
+<hr>
+<br>
+<!--下面是其他区开始-->
+<div>
+
+<form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=&amp;bcc=" method="post" enctype="text/plain">
+<table width="97%">
+
+<!--<input name="" type="text" size="30" placeholder="这是单行输入框，您可以任选一个！"/><br>-->
+<textarea name="" cols="30" rows="1"  placeholder="建议或意见"></textarea><br>
+<input type="submit" name="" class="button" value="点击这里给我们发建议邮件"/><br>
+
+</table>
+</form>
+
+</div>
+<!--其他区结束-->
+<br>
+<br>
+<br>
+</div>
+<!--div遮罩层结束-->
 </body>
-<!--上面是身体区-->
-
-<!--下面是jio注-->
-<footer style="text-align: center;color: darkviolet;">
-<p> ARKFUTURE | ARKFUTURESTUDIO |ARKFUTUREGROUP <br> 方舟未来 | 方舟未来工作室 | 方舟未来集团 <br> 2015 - ∞ </p><br>
-<p>编者说:知识本无用,用了才有用.请务必多读书,多学习</p>
-
+<!--身体区结束-->
+<br>
+<br>
+<br>
+<!--下面是jio注区开始-->
+<footer style="text-align: center;color: white;background-color:rgba(23,12,31,0.2);border-radius:30px;">
+<br>
+<p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
+<br>
 </footer>
-<!--上面是jio注-->
+<!--jio注区结束-->
 
 </html>
