--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--下面是身体区开始-->
 <body style="background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://w.wallhaven.cc/full/we/wallhaven-we1q2r.png);">
 <!--下面是div遮罩层开始-->
-<div class="one" style="background-color:rgba(23,12,31,0.2);border-radius:30px;">
+<div class="one" style="background-color:rgba(255,255,255,0.1);border-radius:30px;">
 
 <!--下面是one区开始-->
 <div>
@@ -33,10 +33,14 @@
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 	<br>
+	<div style="text-align: right;"><a style="color: white;" href="./index.html">页面1</a></div>
+	<br>
+
+	
 </div>
 <!--one区结束-->
 
@@ -52,8 +56,8 @@
 	<div style="text-align: left;color: yellow;"><p>socks服务(代理), 端口:5554</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>http服务(代理), 端口:5555</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>IRC服务(聊天), 端口:默认,进入频道:#ark</p></div><br>
-	<div style="text-align: left;"><p></p><a style="color: yellow;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p></p><a style="color: yellow;" href="./res">临时资源库</a></p></div><br>
+	<div style="text-align: left;"><p><a style="color: yellow;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p><a style="color: yellow;" href="./res">临时资源库</a></p></div><br>
 
 </div>
 <!--two区结束-->
@@ -62,18 +66,23 @@
 <br>
 <!--下面是其他区开始-->
 <div>
-
 <form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=&amp;bcc=" method="post" enctype="text/plain">
 <table width="97%">
-
 <!--<input name="" type="text" size="30" placeholder="这是单行输入框，您可以任选一个！"/><br>-->
 <textarea name="" cols="30" rows="1"  placeholder="建议或意见"></textarea><br>
 <input type="submit" name="" class="button" value="点击这里给我们发建议邮件"/><br>
-
 </table>
 </form>
-
 </div>
+<br>
+<hr>
+<br>
+<div><br>
+	<div style="text-align: center;"><a style="color: white;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="null">友情链接:ATIBY Studio Group</a></div>
+</div><br>
+
+
 <!--其他区结束-->
 <br>
 <br>
@@ -86,7 +95,7 @@
 <br>
 <br>
 <!--下面是jio注区开始-->
-<footer style="text-align: center;color: white;background-color:rgba(23,12,31,0.2);border-radius:30px;">
+<footer style="text-align: center;color: white;background-color:rgba(255,255,255,0.1);border-radius:30px;">
 <br>
 <p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
 <br>
