--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 <!--
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
-我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度,很高兴您的访问
-!@关于页面,由于我们要搭建镜像站,所以尽可能的减轻网站使用资源,所以我(网站管理者)个人决定,使用单页面来写,就不用什么其他框架了
-界面美不美观,我们不在乎,我们为各位同志提供的是服务,界面只是交互使用
-写在最后:很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
+我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
+很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
 -->
 <!--下面是头头区开始-->
 <head>
@@ -13,7 +11,7 @@
 <title>ARKFUTURE</title>
 <meta http-equiv="refresh" content="500">
 <meta name="keywords" content="ARKFUTURE">
-<meta name="description" content="ARKFUTURE 引导页">
+<meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="icon" href="./favicon.ico">
 <link rel="stylesheet" href="./css/a.css">
@@ -23,9 +21,9 @@
 </head>
 <!--头头区结束-->
 <!--下面是身体区开始-->
-<body style="background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://w.wallhaven.cc/full/we/wallhaven-we1q2r.png);">
+<body style="background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://w.wallhaven.cc/full/kx/wallhaven-kx82d6.png);background-size:cover;background-repeat:no-repeat">
 <!--下面是div遮罩层开始-->
-<div class="one" style="background-color:rgba(255,255,255,0.1);border-radius:30px;">
+<div class="one" style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 
 <!--下面是one区开始-->
 <div>
@@ -33,12 +31,22 @@
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/mail.html">ARKFUTURE邮箱使用公示</a></div>
 	<br>
-	<div style="text-align: right;"><a style="color: white;" href="./index.html">页面1</a></div>
-	<br>
+	<div style="text-align: right;">
+                <form action="https://www.baidu.com/baidu" target="_blank">
+                    <input type="text" name="word" size="30" autocomplete="off" placeholder="搜索一下,别管搜啥">
+                    <input type="submit" value="搜索"><i class="iconfont icon-sousuo"></i>
+                </form>
+		<br>
+                <form action="http://www.iciba.com/word" target="_blank">
+                    <input type="text" name="w" size="30" autocomplete="off" placeholder="翻译一个英语单词">
+                    <input type="submit" value="翻译"><i class="iconfont icon-sousuo"></i>
+                </form>
+
+	</div>
 
 	
 </div>
@@ -49,14 +57,15 @@
 <hr>
 <br>
 <div>
-	<h2 style="text-align: center;color: white;">工作室资产列表</h2>
+	<h2 style="text-align: center;color: white;">服务项列表</h2>
 
 	<div style="text-align: left;color: yellow;"><p>Web页面，端口:1314</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>网络电台，端口:1315</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>socks服务(代理), 端口:5554</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>http服务(代理), 端口:5555</p></div><br>
-	<div style="text-align: left;color: yellow;"><p>IRC服务(聊天), 端口:默认,进入频道:#ark</p></div><br>
-	<div style="text-align: left;"><p><a style="color: yellow;" href="./ARKFUTURE/calendar.ics">日历(ics)订阅服务</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>VPN服务(L2TP), 端口:5556</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>IRC服务, 端口:默认不加密端口,进入频道:#ark</p></div><br>
+	<div style="text-align: left;"><p><a style="color: yellow;" href="./ARKFUTURE/calendar.ics">日历(ICS)订阅服务</a></p></div><br>
 	<div style="text-align: left;"><p><a style="color: yellow;" href="./res">临时资源库</a></p></div><br>
 
 </div>
@@ -65,21 +74,12 @@
 <hr>
 <br>
 <!--下面是其他区开始-->
-<div>
-<form action="mailto:ARKFUTURE@FOXMAIL.COM?cc=&amp;bcc=" method="post" enctype="text/plain">
-<table width="97%">
-<!--<input name="" type="text" size="30" placeholder="这是单行输入框，您可以任选一个！"/><br>-->
-<textarea name="" cols="30" rows="1"  placeholder="建议或意见"></textarea><br>
-<input type="submit" name="" class="button" value="点击这里给我们发建议邮件"/><br>
-</table>
-</form>
-</div>
-<br>
-<hr>
-<br>
+
 <div><br>
 	<div style="text-align: center;"><a style="color: white;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
 	<div style="text-align: center;"><a style="color: white;" href="null">友情链接:ATIBY Studio Group</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: white;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
+<div style="text-align: center;"><p style="color: white;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
 </div><br>
 
 
@@ -95,7 +95,7 @@
 <br>
 <br>
 <!--下面是jio注区开始-->
-<footer style="text-align: center;color: white;background-color:rgba(255,255,255,0.1);border-radius:30px;">
+<footer style="text-align: center;color: white;background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <br>
 <p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
 <br>
