--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-当前版本1.5.1
 -->
 <!--下面是头头区开始-->
 <head>
@@ -14,10 +13,10 @@
 <meta name="keywords" content="ARKFUTURE">
 <meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="icon" href="./favicon.ico">
-<link rel="stylesheet" href="./css/a.css">
+<link rel="icon" href="/arkfuture.tpddns.cn:1314//favicon.ico">
+<link rel="stylesheet" href="/arkfuture.tpddns.cn:1314//css/a.css">
 <style>CSS</style>
-<script src="./js/a.js">js</script>
+<script src="/arkfuture.tpddns.cn:1314//js/a.js">js</script>
 <!--<script>弹窗公告</script>-->
 </head>
 <!--头头区结束-->
@@ -36,6 +35,13 @@
 	<br>
 	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE邮箱使用公示</a></div>
 	<br>
+</div>
+<!--one区结束-->
+
+<!--下面是two区开始-->
+<br>
+<hr>
+<br>
 	<div style="text-align: right;">
                 <form action="https://www.baidu.com/baidu" target="_blank">
                     <input type="text" name="word" size="30" autocomplete="off" placeholder="搜索一下,别管搜啥">
@@ -46,17 +52,8 @@
                     <input type="text" name="w" size="30" autocomplete="off" placeholder="翻译一个英语单词">
                     <input type="submit" value="翻译"><i class="iconfont icon-sousuo"></i>
                 </form>
-
 	</div>
 
-	
-</div>
-<!--one区结束-->
-
-<!--下面是two区开始-->
-<br>
-<hr>
-<br>
 <div>
 	<h2 style="text-align: center;color: white;">服务项列表</h2>
 
