--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 	<br>
 </div>
 <!--one区结束-->
