--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-版本:1.5.1滚动发布
+版本:1.5.1滚动发布,这是本地预览版,发布请删除
 -->
 <!--下面是头头区开始-->
 <head>
@@ -32,9 +32,9 @@
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 	<br>
 </div>
 <!--one区结束-->
@@ -62,8 +62,8 @@
 	<div style="text-align: left;color: yellow;"><p>http服务(代理), 端口:5555</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>VPN服务(L2TP), 端口:5556</p></div><br>
 	<div style="text-align: left;color: yellow;"><p>IRC服务, 端口:默认不加密端口,进入频道:#ark</p></div><br>
-	<div style="text-align: left;"><p><a style="color: yellow;" href="/arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">日历(ICS)订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p><a style="color: yellow;" href="/arkfuture.tpddns.cn:1314/res">临时资源库</a></p></div><br>
+	<div style="text-align: left;"><p><a style="color: yellow;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">日历(ICS)订阅服务</a></p></div><br>
+	<div style="text-align: left;"><p><a style="color: yellow;" href="http://arkfuture.tpddns.cn:1314/res">临时资源库</a></p></div><br>
 
 </div>
 <!--two区结束-->
