--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-版本:1.5.1滚动发布,这是本地预览版,发布请删除
+版本:1.5.1滚动发布
 -->
 <!--下面是头头区开始-->
 <head>
@@ -17,7 +17,7 @@
 <link rel="icon" href="/arkfuture.tpddns.cn:1314//favicon.ico">
 <link rel="stylesheet" href="/arkfuture.tpddns.cn:1314//css/a.css">
 <style>CSS</style>
-<script src="/arkfuture.tpddns.cn:1314//js/a.js">js</script>
+<script src="http://arkfuture.tpddns.cn:1314/js/a.js">js</script>
 <!--<script>弹窗公告</script>-->
 </head>
 <!--头头区结束-->
