--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <meta name="keywords" content="ARKFUTURE">
 <meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="icon" href="/arkfuture.tpddns.cn:1314//favicon.ico">
-<link rel="stylesheet" href="/arkfuture.tpddns.cn:1314//css/a.css">
+<link rel="icon" href="http://arkfuture.tpddns.cn:1314/favicon.ico">
+<link rel="stylesheet" href="http://arkfuture.tpddns.cn:1314/css/a.css">
 <style>CSS</style>
 <script src="http://arkfuture.tpddns.cn:1314/js/a.js">js</script>
 <!--<script>弹窗公告</script>-->
