--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-版本:1.5.1滚动发布
+版本:1.5版本
+
+
+
+很感谢我们的成员从2015年支持我们到现在,虽然有人走了,也有人来了,但是阻止不了我们进步的步伐,从今年开始,我们将有新的域名:arkfuture.cn,所有成员都可以申请一个子域名来跳转到自己的网站
+
 -->
+
 <!--下面是头头区开始-->
 <head>
 <meta charset="UTF-8">
