--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-版本:1.5版本
-
-
-
-很感谢我们的成员从2015年支持我们到现在,虽然有人走了,也有人来了,但是阻止不了我们进步的步伐,从今年开始,我们将有新的域名:arkfuture.cn,所有成员都可以申请一个子域名来跳转到自己的网站
+1.8
 
 -->
-
 <!--下面是头头区开始-->
 <head>
 <meta charset="UTF-8">
@@ -20,87 +15,155 @@
 <meta name="keywords" content="ARKFUTURE">
 <meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="icon" href="http://arkfuture.tpddns.cn:1314/favicon.ico">
-<link rel="stylesheet" href="http://arkfuture.tpddns.cn:1314/css/a.css">
+<link rel="icon" href="./favicon.ico">
+<link rel="stylesheet" href="./css/a.css">
 <style>CSS</style>
-<script src="http://arkfuture.tpddns.cn:1314/js/a.js">js</script>
-<!--<script>弹窗公告</script>-->
+<script src="./js/a.js">js</script>
 </head>
 <!--头头区结束-->
-<!--下面是身体区开始-->
-<body style="background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://w.wallhaven.cc/full/kx/wallhaven-kx82d6.png);background-size:cover;background-repeat:no-repeat">
-<!--下面是div遮罩层开始-->
-<div class="one" style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 
+<!--下面是身体区开始-->
+<body style="background-image: url(https://w.wallhaven.cc/full/k7/wallhaven-k7q9m7.png);background-size:cover;background-repeat:no-repeat;">
+
+<!--下面是div遮罩层开始,id=1-->
+<div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是one区开始-->
-<div>
 	<br>
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 	<br>
-</div>
+	<br>
 <!--one区结束-->
+</div>
+<!--上面是div遮罩层结束,id=1-->
 
+<br>
+<br>
+<br>
+
+<!--下面是div遮罩层开始,id=2-->
+<div id=2 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是two区开始-->
 <br>
-<hr>
-<br>
-<div>
-	<h2 style="text-align: center;color: white;">服务项列表</h2>
+	<h1 style="text-align: center;color: white;">服务项列表</h1>
 
-	<div style="text-align: right;">
+
+	<div style="text-align: left;color: yellow;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>http服务(代理), <a style="color: yellowgreen;" href="">端口:5555</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>VPN服务(L2TP), <a style="color: yellowgreen;" href="">端口:5556</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="./ARKFUTURE/calendar.ics">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="./res">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
+
+<br>
+<!--two区结束-->
+</div>
+<!--上面是div遮罩层结束,id=2-->
+
+<br>
+<br>
+<br>
+
+<!--下面是div遮罩层开始,id=3-->
+<div id=3 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<!--下面是其他区开始-->
+<br>
+<h1 style="text-align: center;color: white;">加入我们</h1>
+<div style="text-align: center;"><a style="color: paleturquoise;" href="https://h5.dingtalk.com/circle/healthCheckin.html?corpId=dingf8d0d001aa01235b0a9403ecaabf00b0&46e1191d-6b43-4c=c5e1b836-8148-40&cbdbhh=qwertyuiop">加入钉钉</a></div>
+<div style="text-align: center;"><a style="color: paleturquoise;" href="https://work.weixin.qq.com/join/tfhr3iVoLv0ZjkePHUPZfQ/hb_share_app_member_join?&is=0,175&ic=0&type=fast_join_mode">加入企业微信</a></div>
+<div style="text-align: center;"><a style="color: paleturquoise;" href="https://wpsplus.com/invite?invitekey=f9575b50c4722d96&code=473695511225729024">加入WPS企业</a></div>
+<br>
+<!--其他区结束-->
+</div>
+<!--上面是div遮罩层结束,id=3-->
+
+<br>
+<br>
+<br>
+
+<!--下面是div遮罩层开始,id=4-->
+<div id=4 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<!--下面是其他区开始-->
+<br>
+<h1 style="text-align: center;color: white;">友情链接</h1>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="null">友情链接:ATIBY Studio Group</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: yellowgreen;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
+<div style="text-align: center;"><p style="color: yellowgreen;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
+
+<div style="text-align: center;">
                 <form action="https://www.baidu.com/baidu" target="_blank">
                     <input type="text" name="word" size="30" autocomplete="off" placeholder="搜索一下,别管搜啥">
                     <input type="submit" value="搜索"><i class="iconfont icon-sousuo"></i>
                 </form>
-		<br>
-                <form action="http://www.iciba.com/word" target="_blank">
-                    <input type="text" name="w" size="30" autocomplete="off" placeholder="翻译一个英语单词">
-                    <input type="submit" value="翻译"><i class="iconfont icon-sousuo"></i>
-                </form>
-	</div>
-	<div style="text-align: left;color: yellow;"><p>网络电台，端口:1315</p></div><br>
-	<div style="text-align: left;color: yellow;"><p>socks服务(代理), 端口:5554</p></div><br>
-	<div style="text-align: left;color: yellow;"><p>http服务(代理), 端口:5555</p></div><br>
-	<div style="text-align: left;color: yellow;"><p>VPN服务(L2TP), 端口:5556</p></div><br>
-	<div style="text-align: left;color: yellow;"><p>IRC服务, 端口:默认不加密端口,进入频道:#ark</p></div><br>
-	<div style="text-align: left;"><p><a style="color: yellow;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">日历(ICS)订阅服务</a></p></div><br>
-	<div style="text-align: left;"><p><a style="color: yellow;" href="http://arkfuture.tpddns.cn:1314/res">临时资源库</a></p></div><br>
-
 </div>
-<!--two区结束-->
+
 <br>
-<hr>
-<br>
-<!--下面是其他区开始-->
-
-<div><br>
-	<div style="text-align: center;"><a style="color: white;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
-	<div style="text-align: center;"><a style="color: white;" href="null">友情链接:ATIBY Studio Group</a></div>
-	<div style="text-align: center;"><a style="color: white;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: white;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
-<div style="text-align: center;"><p style="color: white;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
-</div><br>
-
-
 <!--其他区结束-->
-<br>
-<br>
-<br>
 </div>
-<!--div遮罩层结束-->
+<!--上面是div遮罩层结束,id=4-->
+
+
+<br>
+<br>
+<br>
+
+<!--下面是div遮罩层开始,id=5-->
+<div id=5 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<!--二级域名公示开始-->
+<br>
+<h1 style="text-align: center;color: white;">工作室二级域名公示</h1>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<br>
+<!--二级域名公示结束-->
+</div>
+<!--上面是div遮罩层结束,id=5-->
+
+
+<br>
+<br>
+<br>
+
+<!--下面是div遮罩层开始+框架开始,id=6-->
+<div id=6 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<!--1开始-->
+<br>
+<h1 style="text-align: center;color: white;"></h1>
+<div style="text-align: center;"><a style="color: yellowgreen;" >a</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" >b</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" >c</a></div>
+<div style="text-align: center;"><p style="color: yellowgreen;" >d</p></div>
+<br>
+<!--1结束-->
+</div>
+<!--上面是div遮罩层结束+框架结束,id=6-->
+
+
+
+
+
+
+
 </body>
 <!--身体区结束-->
+
 <br>
 <br>
 <br>
+
 <!--下面是jio注区开始-->
-<footer style="text-align: center;color: white;background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<footer style="text-align: center;background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <br>
-<p>ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
+<br>
+<p style="color: white;">ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
 <br>
 </footer>
 <!--jio注区结束-->
