--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 <!--1开始-->
 <br>
 <h1 style="text-align: center;color: white;"></h1>
-<div style="text-align: center;"><a style="color: yellowgreen;" >a</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" >b</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" >c</a></div>
-<div style="text-align: center;"><p style="color: yellowgreen;" >d</p></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
+<div style="text-align: center;"><p style="color: yellowgreen;" ></p></div>
 <br>
 <!--1结束-->
 </div>
